--- a/index.html
+++ b/index.html
@@ -5,26 +5,37 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Chatbot</title>
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/css/materialize.min.css">
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
   
   <div class="container">
-    <div class="chatbot">
-      <div class="message-box bot-message">
-        <div class="message light-blue lighten-5">Message</div>
-        <div class="user">Bot</div>
+    <h1>Chatbot</h1>
+    <form action="#" id="form">
+      <div class="chatbot">
+        <div class="message-box bot-message">
+          <div class="message light-blue lighten-5">Olá usuário, qual é o seu nome?</div>
+          <div class="user">Bot</div>
+        </div>
       </div>
-      <div class="message-box user-message">
-        <div class="message grey lighten-5">Message</div>
-        <div class="user">User</div>
+      <div class="message-input-box">
+        <input type="text" id="message-input" placeholder="Digite sua mensagem.." autocomplete="off">
+        <select id="select-input">
+          <option value="" selected>Selecione a área</option>
+          <option value="TI">TI</option>
+          <option value="Logística">Logística</option>
+          <option value="ADM">ADM</option>
+        </select>
+        <button class="btn waves-effect waves-light" type="submit" name="action">Enviar
+          <i class="material-icons right">send</i>
+        </button>
       </div>
-    </div>
+    </form>
   </div>
 
-  <script src="https://code.jquery.com/jquery-3.3.1.js" integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60=" crossorigin="anonymous"></script>
-
+  <script src="https://code.jquery.com/jquery-3.3.1.js" integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60=" crossorigin="anonymous"></script><script src="script.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.min.js"></script>
 </body>
 </html>
